# C-TANIST_MACHINE

./: .gitignore  LICENSE.txt  MASMAPRG.ASM  README.md  create_custom_binary.py  meson.build  montador  test.lst
new-project/ASM/: MASMAPRG-test_macro_prototype.asm
src/: L2DFileDialog.h  assembler.cpp  assembler.hpp  linker.cpp  linker.hpp  loader.cpp  loader.hpp  main.cpp  montador.cpp  pipeline.cpp  pipeline.hpp  preprocessor.cpp  preprocessor.hpp  types.hpp  ui.cpp  ui.hpp  vm.cpp  vm.hpp
src/windows/: console.cpp  controls.cpp  memory_editor.cpp  text_editor.cpp  vmstate.cpp
tests/: nested_macros.asm  test-literais.asm  test.asm  test.lst  test2.asm  test3.asm  testFirstPass.asm  test_ferrugem.asm  test_macro_prototype.asm
